5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1771_3121.log
== TEST (2019-05-21 23:11:25) 
-- CODE:
from numpy import*
v=array(eval(input("&$&")))
w=array(eval(input("&_&")))

if(size(v) == size(w)):
	if(v[f]==11):
		v[f]="Pedra"
		if(v

-- ERROR:
File "XXXX", line 9
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 23:13:32) 
-- CODE:
from numpy import*
v=array(eval(input("&$&")))
w=array(eval(input("&_&")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 12:23:23) 
-- CODE:
from numpy import*

v=array(eval(input('vv')), dtype=int)
w=array(eval(input('ww')), dtype=int)


v[11]="Pedra"
w[11]="Pedra"
v[22]="Papel"
w[22]="Papel"
v[33]="Tesoura"
w[33]="Tesoura"
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 12:23:37) 
-- CODE:
from numpy import*

v=array(eval(input('vv')), dtype=int)
w=array(eval(input('ww')), dtype=int)


v[11]="Pedra"
w[11]="Pedra"
v[22]="Papel"
w[22]="Papel"
v[33]="Tesoura"
w[33]="Tesoura"
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 18:44:20) 
-- CODE:
from numpy import *
e = array(eval(input("jogadas de Eusapia: ")))
b = array(eval(input("jogadas de Barsanulfo: ")))
i = 0
soma_e = 0
soma_b = 0
valor_e = 0
valor_b = 0
while(i < size(ve)):
	if(e[i] == 33 and b[i] == 22):
		valor_e = 1
		valor_b = 0
	elif(e[i] == 22 and b[i] == 11):
		valor_e = 1
		valor_b = 0
	elif(e[i] == 11 and b[i] == 33):
		valor_e = 1
		valor_b = 0
	elif(e[i] == 11 and b[i] == 11):
		valor_e = 0
		valor_b = 0
	elif(e[i] == 22 and b[i] == 22):
		valor_e = 0
		valor_b = 0
	elif(e[i] == 33 and b[i] == 33):
		valor_e = 0
		valor_b = 0
	elif(e[i] == 22 and b[i] == 33):
		valor_b = 1
		valor_e = 0
	elif(e[i] == 33 and b[i] == 11):
		valor_b = 1
		valor_e = 0
	elif(e[i] == 11 and b[i] == 22):
		valor_b = 1
		valor_e = 0
	soma_b = soma_b + valor_b
	soma_e = soma_e + valor_e
	i = i + 1
print(size(e))
if(soma_b == soma_e):
	print("EMPATE")
if(soma_b>soma_e):
	print("BARSANULFO")
if(soma_e>soma_b):
	print("EUSAPIA")
	
-- EXECUTION TIME:
0.417699
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/3121/main.py", line 9, in <module>
    while(i < size(ve)):
NameError: name 've' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 18:44:28) 
-- CODE:
from numpy import *
e = array(eval(input("jogadas de Eusapia: ")))
b = array(eval(input("jogadas de Barsanulfo: ")))
i = 0
soma_e = 0
soma_b = 0
valor_e = 0
valor_b = 0
while(i < size(ve)):
	if(e[i] == 33 and b[i] == 22):
		valor_e = 1
		valor_b = 0
	elif(e[i] == 22 and b[i] == 11):
		valor_e = 1
		valor_b = 0
	elif(e[i] == 11 and b[i] == 33):
		valor_e = 1
		valor_b = 0
	elif(e[i] == 11 and b[i] == 11):
		valor_e = 0
		valor_b = 0
	elif(e[i] == 22 and b[i] == 22):
		valor_e = 0
		valor_b = 0
	elif(e[i] == 33 and b[i] == 33):
		valor_e = 0
		valor_b = 0
	elif(e[i] == 22 and b[i] == 33):
		valor_b = 1
		valor_e = 0
	elif(e[i] == 33 and b[i] == 11):
		valor_b = 1
		valor_e = 0
	elif(e[i] == 11 and b[i] == 22):
		valor_b = 1
		valor_e = 0
	soma_b = soma_b + valor_b
	soma_e = soma_e + valor_e
	i = i + 1
print(size(e))
if(soma_b == soma_e):
	print("EMPATE")
if(soma_b>soma_e):
	print("BARSANULFO")
if(soma_e>soma_b):
	print("EUSAPIA")
	
-- EXECUTION TIME:
0.582907
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/3121/main.py", line 9, in <module>
    while(i < size(ve)):
NameError: name 've' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 18:44:28) 
-- CODE:
from numpy import *
e = array(eval(input("jogadas de Eusapia: ")))
b = array(eval(input("jogadas de Barsanulfo: ")))
i = 0
soma_e = 0
soma_b = 0
valor_e = 0
valor_b = 0
while(i < size(ve)):
	if(e[i] == 33 and b[i] == 22):
		valor_e = 1
		valor_b = 0
	elif(e[i] == 22 and b[i] == 11):
		valor_e = 1
		valor_b = 0
	elif(e[i] == 11 and b[i] == 33):
		valor_e = 1
		valor_b = 0
	elif(e[i] == 11 and b[i] == 11):
		valor_e = 0
		valor_b = 0
	elif(e[i] == 22 and b[i] == 22):
		valor_e = 0
		valor_b = 0
	elif(e[i] == 33 and b[i] == 33):
		valor_e = 0
		valor_b = 0
	elif(e[i] == 22 and b[i] == 33):
		valor_b = 1
		valor_e = 0
	elif(e[i] == 33 and b[i] == 11):
		valor_b = 1
		valor_e = 0
	elif(e[i] == 11 and b[i] == 22):
		valor_b = 1
		valor_e = 0
	soma_b = soma_b + valor_b
	soma_e = soma_e + valor_e
	i = i + 1
print(size(e))
if(soma_b == soma_e):
	print("EMPATE")
if(soma_b>soma_e):
	print("BARSANULFO")
if(soma_e>soma_b):
	print("EUSAPIA")
	
-- EXECUTION TIME:
0.939757
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/3121/main.py", line 9, in <module>
    while(i < size(ve)):
NameError: name 've' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 18:44:42) 
-- CODE:
from numpy import *
e = array(eval(input("jogadas de Eusapia: ")))
b = array(eval(input("jogadas de Barsanulfo: ")))
i = 0
soma_e = 0
soma_b = 0
valor_e = 0
valor_b = 0
while(i < size(e)):
	if(e[i] == 33 and b[i] == 22):
		valor_e = 1
		valor_b = 0
	elif(e[i] == 22 and b[i] == 11):
		valor_e = 1
		valor_b = 0
	elif(e[i] == 11 and b[i] == 33):
		valor_e = 1
		valor_b = 0
	elif(e[i] == 11 and b[i] == 11):
		valor_e = 0
		valor_b = 0
	elif(e[i] == 22 and b[i] == 22):
		valor_e = 0
		valor_b = 0
	elif(e[i] == 33 and b[i] == 33):
		valor_e = 0
		valor_b = 0
	elif(e[i] == 22 and b[i] == 33):
		valor_b = 1
		valor_e = 0
	elif(e[i] == 33 and b[i] == 11):
		valor_b = 1
		valor_e = 0
	elif(e[i] == 11 and b[i] == 22):
		valor_b = 1
		valor_e = 0
	soma_b = soma_b + valor_b
	soma_e = soma_e + valor_e
	i = i + 1
print(size(e))
if(soma_b == soma_e):
	print("EMPATE")
if(soma_b>soma_e):
	print("BARSANULFO")
if(soma_e>soma_b):
	print("EUSAPIA")
	
-- EXECUTION TIME:
0.431459
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
